constraintlayout chain example

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,37 +8,34 @@
     tools:context=".MainActivity">
 
     <View
-        android:id="@+id/green_square"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@android:color/holo_green_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/blue_square"
-        app:layout_constraintVertical_weight="2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/blue_square"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@android:color/holo_blue_light"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/red_square"
-        app:layout_constraintTop_toBottomOf="@id/green_square"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintVertical_weight="2"/>
-
-    <View
         android:id="@+id/red_square"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@android:color/red"
-        app:layout_constraintStart_toEndOf="@id/blue_square"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/green_sqaure"
+        app:layout_constraintHorizontal_chainStyle="packed"
+       />
+
+    <View
+        android:id="@+id/green_sqaure"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/holo_green_light"
+        app:layout_constraintStart_toEndOf="@id/red_square"
+        app:layout_constraintEnd_toStartOf="@id/blue_sqaure"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:id="@+id/blue_sqaure"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/holo_blue_light"
+        app:layout_constraintStart_toEndOf="@id/green_sqaure"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/green_square"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintVertical_weight="2"/>
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
