pass complex data types using the navigation component and navArgs

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,5 +26,8 @@
             android:name="greetingNumber"
             app:argType="integer"
             android:defaultValue="2" />
+        <argument
+            android:name="student"
+            app:argType="com.vu.androidbasicapp.model.Student" />
     </fragment>
 </navigation>
