--- a/app/src/main/res/layout/basic_viewholder_layout.xml
+++ b/app/src/main/res/layout/basic_viewholder_layout.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/screenTitle"
+        android:id="@+id/itemtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/item"
