Base code for DI Implementation
Implement new viewholder layout and update viewholder class

Change recyclerview data type to api response type

Update Fragment and ViewModel to set the response to adapter

Add safe-args plugin to project

Create nav_graph action home to dashboard

Implement button click listener in ViewHolder using lambda function

Make Response Item a Parcelable type and use it to create an argument in the destination screen

update lambda to use Response Item

Use nav args to obtain Response item data passed through by the ViewHolder

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,12 +9,20 @@
         android:id="@+id/homeScreenFragment"
         android:name="com.vu.androidbasicapp.home.ui.HomeScreenFragment"
         android:label="fragment_home_screen"
-        tools:layout="@layout/fragment_home_screen" />
+        tools:layout="@layout/fragment_home_screen" >
+        <action
+            android:id="@+id/action_homeScreenFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.vu.androidbasicapp.DashboardFragment"
         android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <argument
+            android:name="detail"
+            app:argType="com.vu.androidbasicapp.home.data.ResponseItem" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.vu.androidbasicapp.ProfileFragment"
