Make Response Item a Parcelable type and use it to create an argument in the destination screen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,11 @@
         android:id="@+id/dashboardFragment"
         android:name="com.vu.androidbasicapp.DashboardFragment"
         android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <argument
+            android:name="detail"
+            app:argType="com.vu.androidbasicapp.home.data.ResponseItem" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.vu.androidbasicapp.ProfileFragment"
